--- a/index.css
+++ b/index.css
@@ -2,27 +2,21 @@
   text-align: center;
 }
 
-.App-header {
-  background-color: rgb(238, 194, 255);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: rgb(0, 0, 0);
-}
-
 .h1 {
   text-align: center;
-  margin: 2in;
-  font-size: 7vmax;
+  margin-top: 2in;
+  font-size: 10vw;
   font-family: 'Noto Sans Mono';
 }
 
 .icons_container {
   text-align: center;
+  margin-top: 10vh;
   transform: translateY(-50%);
 }
 
-
+.icon {
+  width: 20vw;
+  max-width: 2in;
+  min-width: 1in;
+}
