--- a/index.css
+++ b/index.css
@@ -4,19 +4,24 @@
 
 .h1 {
   text-align: center;
-  margin-top: 2in;
+  margin-top: 10vh;
   font-size: 10vw;
-  font-family: 'Noto Sans Mono';
+  font-family: "Noto Sans Mono";
 }
 
 .icons_container {
   text-align: center;
+  align-items: center;
   margin-top: 10vh;
-  transform: translateY(-50%);
+  position: relative;
 }
 
 .icon {
-  width: 20vw;
-  max-width: 2in;
-  min-width: 1in;
+  height: 2in;
+  min-height: 1in;
+  margin-right: 5vw;
+}
+
+.icon_link {
+  text-decoration: none;
 }
