some drawing thing

--- a/index.css
+++ b/index.css
@@ -31,8 +31,20 @@
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
   font-size: 0.75rem;
   font-family: "Noto Sans Mono";
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  z-index: 2;
+}
+
+canvas {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
