Add dynmap and track map

--- a/index.css
+++ b/index.css
@@ -48,3 +48,24 @@ canvas {
   top: 0;
   left: 0;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  z-index: 1;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-icon {
+  height: 7vh;
+}
